--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -7,4 +7,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # JPA settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Updated dialect for Hibernate 7
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
